// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Validators shows a list of validators 1`] = `
<div>
  <tablevalidators-stub
    showonmobile="expectedReturns"
    validators="[object Object],[object Object],[object Object]"
  />
</div>
`;

exports[`Validators shows a message if still connecting 1`] = `
<div>
  <tmdataconnecting-stub />
</div>
`;

exports[`Validators shows a message if still loading 1`] = `
<div>
  <tmdataloading-stub
    title="Data is loading…"
  />
</div>
`;

exports[`Validators shows a message if there is nothing to display 1`] = `
<div>
  <tmdataempty-stub
    icon="info_outline"
  />
</div>
`;
